Tue Nov 14 17:55:52 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Makefile:
          PACE is disabled by default, unless pace=1 is set in the command
          line or the platform_macros.GNU file.

Tue Nov 14 19:36:47 2000  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/test_siosig_ace.cpp: Don't log
          the read/written file using ACE_DEBUG - it will usually overflow
          the ACE_Log_Record max message length and do bad things.

Tue Nov 14 19:19:16 2000  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/simple_test_proactor.cpp: Don't log
          the read/written file using ACE_DEBUG - it will usually overflow
          the ACE_Log_Record max message length and do bad things.
          Thanks to John Buckman <john@lyris.com> for reporting this.

Tue Nov 14 18:43:51 2000  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/test_proactor3.cpp: Replace use of
          list<Sender *> with Sender * [] so it builds without inifintely
          complicated explicit instantiations on gcc. KISS ;-)

Tue Nov 14 17:43:26 2000  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/test_aiocb_ace.cpp: Fixed to work
          correctly if one of the aio ops completes, but not the other,
          during a pass through the Test_Aio::do_aio loop. Thanks to
          John Buckman <john@lyris.com> for reporting this.

Tue Nov 14 14:19:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Log_Record.cpp:

          In ACE_Log_Record::print, changed the call to ACE_OS::fprintf
          to use ACE_TEXT("%s") as the second argument instead of just
          "%s".  This should make logging under ACE_USES_UNICODE readable.
          Thanks to James Buck <jim@nowsol.com> for reporting the problem
          and submitting this patch.

Tue Nov 14 09:19:16 2000  Carlos O'Ryan  <coryan@uci.edu>

        * examples/Threads/thread_specific.cpp: